# tiz

./: .editorconfig  .eslintrc.json  .gitignore  .htmlhintrc  .prettierrc  .stylelintrc.json  AGENTS.md  README.md  eslint.config.js  pyproject.toml  tiz
.github/workflows/: ci.yml
debian/: changelog  control  copyright  rules  tiz.lintian-overrides  watch
examples/custom_tools/: datetime_tool.py
examples/custom_tools/random_bytes/: RandomBytesTool.py  random_bytes_tool.py
scripts/: check_versions.sh  checks.sh  full_int_coverage.sh  mkdeb.sh  mkman.sh  mkrepo.sh  sandbox_coverage.sh  signrepo.sh  web_api_coverage.sh  web_checks.sh
src/tiz/: __init__.py  __main__.py  audio_inference_clients.py  autocomplete.py  base_task_executor.py  chat.py  cli.py  conversion_sandbox.py  helpers.py  inference_clients.py  interactive_chat.py  log.py  manifest_executor.py  manifest_parser.py  recorder.py  sandbox_container.py  sandbox_dirs.py  sandbox_manager.py  sandbox_worker.py  web_api.py  web_config_parser.py
src/tiz/data/containerfiles/: Containerfile.tiz-worker  Containerfile.tiz-worker-cpp  Containerfile.tiz-worker-esp32-5.5  Containerfile.tiz-worker-py  Containerfile.tiz-worker-re  Containerfile.tiz-worker-rust  Containerfile.tiz-worker-tizdev
src/tiz/data/prompts/: assistant.j2  coding.j2  websearch.j2
src/tiz/data/web_static/: app.js  index.html  manifest.json  style.css  sw.js  theme.js
src/tiz/tools/: __init__.py  applypatch.py  base.py  bash.py  cargofetch.py  edit.py  filemetadata.py  glob_tool.py  grep.py  insertfile.py  listdir.py  readfile.py  readmulti.py  subagents.py  uvpythoninstall.py  uvsync.py  webfetch.py  websearch.py  writefile.py
src/tiz/worker_scripts/: audio_convert.sh  doc2pics.sh  pdf2pics.sh  video2pics.sh
tests/: conftest.py  fake_podman.py  test_audio_inference_clients.py  test_autocomplete.py  test_base_task_executor.py  test_chat.py  test_cli.py  test_conversion_sandbox.py  test_debian.py  test_full_integration.py  test_helpers.py  test_inference_clients.py  test_integration.py  test_interactive_chat.py  test_log.py  test_main.py  test_manifest_executor.py  test_manifest_parser.py  test_recorder.py  test_sandbox_container.py  test_sandbox_dirs.py  test_sandbox_manager.py  test_sandbox_worker.py  test_tiz_init.py  test_tools_applypatch.py  test_tools_base.py  test_tools_bash.py  test_tools_cargofetch.py  test_tools_edit.py  test_tools_filemetadata.py  test_tools_glob.py  test_tools_grep.py  test_tools_init.py  test_tools_insertfile.py  test_tools_listdir.py  test_tools_readfile.py  test_tools_readmulti.py  test_tools_subagents.py  test_tools_uvpythoninstall.py  test_tools_uvsync.py  (+6 more)
