[build-system]
requires = ["flit_core>=3.8"]
build-backend = "flit_core.buildapi"

[project]
name = "tizbot"
version = "0.1.0"
description = "An agentic AI chatbot with sandboxed tool execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Salvatore Mesoraca", email = "s.mesoraca16@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gitpython>=3.1",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "websockets>=10.0,<11.0",
]

[project.optional-dependencies]
audio = [
    "pyaudio>=0.2.11",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests>=2.28",
    "argcomplete>=3.0",
]
completion = [
    "argcomplete>=3.0",
]
minify = [
    "htmlmin>=0.1.12",
    "rjsmin>=1.2.0",
]

[project.scripts]
tiz = "tiz.cli:main"

[project.urls]
Homepage = "https://github.com/smeso/tiz"
Documentation = "https://github.com/smeso/tiz#readme"
Repository = "https://github.com/smeso/tiz.git"
Issues = "https://github.com/smeso/tiz/issues"

[tool.flit.module]
name = "tiz"
srcdir = "src"

[tool.setuptools.package-data]
tiz = ["py.typed", "data/**/*", "worker_scripts/*"]

[tool.ruff]
target-version = "py310"
line-length = 88
lint.select = [
    "E", "F", "W",  # pycodestyle, pyflakes, whitespace
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tiz"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "tests.test_integration"
disable_error_code = ["union-attr", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src/tiz --cov-branch --cov-report=term-missing --cov-fail-under=100"
markers = [ "accurate_cov: improve coverage accuracy skipping some tests"]

[tool.coverage.run]
source = ["src/tiz"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
